# spitz

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: activations.rs  architecture.rs  lib.rs
src/interfaces/: mod.rs
src/maths/: activations.rs  mod.rs
src/nnetwork/: mod.rs
src/types/: mod.rs
tests/: basic_tests.rs  datas_tests.rs  learning_tests.rs
