[package]
name = "spitz"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.0", features = ["blas"] }
blas-src = { version = "0.4", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.7.0", default-features = false, features = ["cblas", "system"] }
ndarray-rand = "0.11.0"

#ndarray = "0.13.0"

[dev-dependencies]