[package]
name = "spitz"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.0", features = ["blas"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

ndarray-rand = "0.11.0"

log="0.4.8"

[dev-dependencies]
simple_logger = "1.3.0"
mnist-extractor = "0.1.0"